
2004/07/31: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- gwenhywfar.m4: fixed a buf (was always using libgwen_pp instead of 
  libgwenhywfar)


2004-07-30   Christian Stimming <stimming@tuhh.de>

	* all header files: Removed GWENHYWFAR_API from all typedefs since
	this will break compilation of Win32 applications as soon as those
	use any gwen typedef as function return type.


2004/07/30: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- base: added module PluginDescription. This module loads all XML files
  from a directory and tries to extract plugin informations from them.
  In future all my plugins will be shipped with such an XML file to allow
  scanning for available plugins without the need to actually load the
  plugins (with all the rat's tail that implies).
- fixed a bug in POSIX libloader


2004/07/29: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- parser/text: added GWEN_Text_CheckSimilarity() which checks how equal
  two strings are (untested)


2004/07/28: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- base/misc.h: fixed a bug (concerning C++)
- base: added misc2.h
  This file now contains wrappers around a GWEN_LIST which allow typesafe
  use of a GWEN_LIST.
- base/misc2.h: added *List2_ForEach functions
- base/misc2.h: is now only a logical link to list2.h


2004/07/27: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- parser/base64: fixed a bug in GWEN_Base64_Decode
- crypt/ossl/nettransportssl.c: fixed some bugs, added verbosity while
  testing AqHBCI's PIN/TAN support which extensively uses it


2004/07/22: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ipc/netconnectionhttp: added defaultUrl. This is used when no URL is given
  in a request. This very much simplifies using this class.

