@@ -43,7 +43,7 @@ struct GWEN_PLUGIN_DESCRIPTION {
   char *author;
   char *version;
   char *longDescr;
-
+  int isActive;
 };
 
 GWEN_PLUGIN_DESCRIPTION *GWEN_PluginDescription_new(GWEN_XMLNODE *node);
